--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@mmpg-soft/sci-sources",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Cite your sources in a scientific way",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "test": "jest",
-    "lint": "eslint src"
+    "build": "tsc"
   },
   "dependencies": {
     "typescript": "^5.4.3"
